# AutoValetGarage

./: README.md
final_project/: package.xml  setup.py
final_project/final_project/: convert_exit_task.py  enter_process.py  parking_manage_realtime.py  robot1_status.py  robot2_status.py  robot_enter_node.py  robot_enter_node_improved.py
final_project/launch/: full_system.launch.py  parking_system.launch.py  robot_monitoring.launch.py
parking_ws/maps/: _map_name_.pgm  _map_name_.yaml
parking_ws/nav2_config/: robot1_nav2.yaml  robot5_nav2.yaml
parking_ws/src/parking_executor/: package.xml  setup.cfg  setup.py
parking_ws/src/parking_executor/parking_executor/: mission_executor.py
parking_ws/src/parking_msgs/: CMakeLists.txt  package.xml
parking_ws/src/parking_msgs/msg/: Mission.msg  MissionArray.msg  MissionStatus.msg  ParkingCommand.msg  SlotState.msg  SlotStates.msg
parking_ws/src/parking_system/: package.xml  setup.cfg  setup.py
parking_ws/src/parking_system/launch/: multi_parking_system.launch.py
parking_ws/src/parking_system/parking_system/: mission_manager.py  parking_slot_manager.py  task_allocator.py
parking_ws/src/parking_system/parking_system/config/: parking_blocks.csv
