<?xml version="1.0"?>
<package format="3">
  <name>parking_executor</name>
  <version>0.0.0</version>
  <description>Mission executor for multi-robot parking system</description>

  <maintainer email="your_name@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>parking_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>parking_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

